@@ -1,3 +1,4 @@
+- tell the user to "restart system" when needed (needs urpmi-5.14)
 - rpmdrake:
   o add tooltips to pull down menus & to search entry
 
